math-core/tests/snapshots/error_test__hspace_unknown_unit.snap
---
source: math-core/tests/error_test.rs
expression: "\\hspace{2ly}"
---
Position: 7
ExpectedLength(
    "2ly",
)
