math-core/tests/snapshots/error_test__incorrect_bracket.snap
---
source: math-core/tests/error_test.rs
expression: "\\operatorname[lim}"
---
Position: 17
UnexpectedClose(
    GroupEnd,
)
