math-core/tests/snapshots/error_test__incorrect_bracket_in_begin.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{matrix] 1 \\end{matrix}"
---
Position: 13
DisallowedChar(
    ']',
)
