math-core/tests/snapshots/error_test__int_double_sub.snap
---
source: math-core/tests/error_test.rs
expression: "\\int__3 x dx"
---
Position: 5
BoundFollowedByBound
