math-core/tests/snapshots/error_test__invalid_sub_sup.snap
---
source: math-core/tests/error_test.rs
expression: x^_
---
Position: 2
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
