math-core/tests/snapshots/error_test__invalid_sup.snap
---
source: math-core/tests/error_test.rs
expression: x^^
---
Position: 2
CannotBeUsedHere {
    got: Circumflex,
    correct_place: AfterOpOrIdent,
}
