math-core/tests/snapshots/error_test__mismatched_begin_end.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{matrix} 1 \\end{bmatrix}"
---
Position: 21
MismatchedEnvironment {
    expected: Matrix,
    got: BMatrix,
}
