math-core/tests/snapshots/error_test__no_rbrack_instead_of_bracket.snap
---
source: math-core/tests/error_test.rs
expression: "\\sqrt[3\\rbrack{1}"
---
Position: 17
UnclosedGroup(
    SquareBracketClose,
)
