math-core/tests/snapshots/error_test__operatorname_with_begin.snap
---
source: math-core/tests/error_test.rs
expression: "\\operatorname{\\begin{matrix}}"
---
Position: 14
NotValidInTextMode(
    Begin,
)
