math-core/tests/snapshots/error_test__operatorname_with_end.snap
---
source: math-core/tests/error_test.rs
expression: "\\operatorname{\\end{matrix}}"
---
Position: 14
UnexpectedClose(
    End,
)
