math-core/tests/snapshots/error_test__operatorname_with_text_command.snap
---
source: math-core/tests/error_test.rs
expression: "\\operatorname{\\ae}"
---
Position: 14
UnknownCommand(
    "ae",
)
